--- a/code/Preprocessing.ipynb
+++ b/code/Preprocessing.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "#img = cv2.imread(\"..//output//2023-01-29-201405.png\")\n",
     "\n",
-    "img = cv2.imread(\"C://Users/e801085/Downloads/image2021-10-6_12-13-33.png\")"
+    "img = cv2.imread(\"..//output//img_11.jpg\")"
    ]
   },
   {
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
+    "\n",
     "#try to erase images from context \n",
     "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)  # transform to grayscale\n",
     "thresh = cv2.threshold(gray, 0, 255, cv2.THRESH_BINARY+cv2.THRESH_OTSU)[1]  # perform OTSU threhold\n",
@@ -117,7 +117,7 @@
     "reverse = cv2.bitwise_not(img.copy())  # reversed image of the actual image 0 becomes 255 and 255 becomes 0\n",
     "processed_img = cv2.bitwise_and(reverse, reverse, mask=erosion)  # per-element bit-wise conjunction of the actual image and eroded mask (erosion)\n",
     "processed_img = cv2.bitwise_not(processed_img) \n",
-    "'''"
+    "show_img(processed_img)"
    ]
   },
   {
@@ -147,25 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = pytesseract.image_to_string(img, lang='por')"
+    "text = pytesseract.image_to_string(processed_img, lang='por')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Primeira etapa que consiste na :onstruçâç das\\nbases para o objetivo de uma arquitetuda\\nrobusta para suportar todo o downsizing de\\nMainframe. Definição e construção da\\narquitetura de referência.\\n\\nv\\n\\nVisão 360\\n\\nEnquadrada na iniciativa que visa o offloading\\nmassivo de dados e a construção de\\n“primitivas' para cada domínio/tabela para\\npotenciar, seja em tempo ou custo, os novos\\ndesenvolvimentos, a iniciativa 'Visão 360'\\npermitirá ter uma visão 360 de cliente,\\ncontrato e produto, potenciando a sua\\nexploração seja para consultas Operacionais\\nou analíticas.\\n\\nIniciativa imediata de refazer as operativas\\nmais executadas / consumistas, com objetivo\\nclaro de redução de custos e evitar aumentos\\n\\nde capacidade ou quebras de serviço. É\\nfundamental nesta iniciativa a divisão\\n(modelização) como principio, potenciando a\\nreutilização em novas peças/funcionalidades.\\n\\nLean Core\\n\\nNova Arquitectura Digital, construida com as\\nnovas a stack tecnológica mais digitaç,\\nexpostas ao mundo e a novos negócios. Nova\\nAplicação de Cartões e do centro de\\nAutorizações no novo Core-Banking.\\n\""
+       "'modo súbito, o âmbito da ação das marés, enquanto à vida era atirada cada vez\\nmais para C dentru das margens e às forças da se].eca.. natural produziam espécies\\nlãs às dessecações periódicas.\\n\\nadapi:a\\nO à Causa, à vid\\n\\nQualquer que tenha sido a invadiu a superf ície terrestre da\\nTerra há mais. ou menos 425.000. \"O de anos. Dando seguimento a essa invasão,\\na vida expandiu-se até preencher quase : todos OS mczhis imagináveis na Terra.\\n\\npenas as calotas. pilares Os pmos ias mlntanhas mals altas e os desertos mais\\nseécos são relativamente sem vida, .\\n\\nDo começo ao fim, a vida consistiu em dezenas de mi J S\\nferentes, suficientemente distintas a ponto de serem incapazes de se cmzaf entre\\nsi. A maioria delas encontra-se extinta neste momento, mas ainda podem existir\\ncerca de 2.000.000.\\n\\nAs diferentes espécies têm ambientes dz.stmms âl.. .i-ír,mas sai mmm espa\\'lha-\\ndas e vagueilam por continentes e Oceanos;outras são\\n\"tradas apenas em alguma pequena ilha partmula,r ou em algum vale 1sladm Na\\nconjuntn quanto mais amplo for o ambiente, mals imune será sua espécie à mu-\\ndança de local e ao desastre e mais bem-sucedida ela será no critério que vale do\\nponto de vista evolucionário: a submmvnma\\n\\nO grupo de espécie no qv\\n*ta egantmo é aduele que peri:\\n\\ndem vem da palawa latina que « le\\n;_*ém.e humma ]ustameme pm este motmq\\n\\ngrande fra.çãca desse ambleme àl p egiões da\\nCa dl Sul alguns a regiões da Afnca ÚUÍTÚÉ a reqmes »- sudeste da Asm é assim\\n\\nbem—sucedlz.s ou não, os primatas especializaram-se n\\' \\'pier\\nmteliecmal Pam o tamanho deles, seus cérê\\'bms são notavelmente ;\\',-_;,n*es e bem\\ndesenvolvidos e, com o decorrer do temp_; a espécie de primata recentemente\\ncíesemomda f-fumu cérebr-s amda maiores.\\n\\ngrupo de espécie da ordem dos p !nmatas que desenvolveu 6 cérebro n\\ngrau mais elevaic— fu o que pertence à familia Hominidae. Podemos %Ims I\\'EÍÉHT\\'\\nespécie individual dessa família como sendo hominideos, alávra\\n\\n| que vem da pa\\nlatina que designa “homem\", uma vêz.que todc\\n\\ndos eles, aíí\\'_ mMesmo:.o mais & primiti-\\n\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
